[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/gui/grey1.png" type="Texture" id=1]
[ext_resource path="res://scripts/guicomponents/NinePatchButton.gd" type="Script" id=2]
[ext_resource path="res://fonts/Exo2-Medium.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="NinePatchButton" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="resized" from="." to="." method="_on_NinePatchButton_resized"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]
